# AdventOfCode-2023

./: README.md  pyproject.toml
cpp_src/day5/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
cpp_src/day5/src/: Almanac.cpp  Almanac.h  LazyRange.cpp  LazyRange.h  logger.h  main.cpp  map.cpp  map.h
cpp_src/day5/test_package/: conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanbuildenv-release-x86_64.sh  conanfile.py  conanrun.sh  conanrunenv-debug-x86_64.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  deactivate_conanrunenv-debug-x86_64.sh  deactivate_conanrunenv-release-x86_64.sh
cpp_src/day5/tests/: LazyRange_tests.cpp  map_tests.cpp
day 5/: main.py  model.py  part_1.py  test_model.py
day1/: README.md  part1.py  part2.py
day2/: model.py  part1.py  part2.py
day3/: README.md  debug.py  part2.py
day4/: model.py  part1.py
src/day2/: README.md  part2.py
src/day3/: model.py  part1.py  part2.py
src/day4/: model.py  part1.py  part2.py
src/day5/: main.py  model.py  test_model.py
